Adicionado ícone ao lado do título do site

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Global Azure Bootcamp</a>
+                <a class="navbar-brand topnav" href="#"><i class="fa fa-windows"></i>&nbsp; Global Azure Bootcamp</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
