atualização do site

--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Global Azure Bootcamp</h1>
-                        <h3>Campinas - 2016</h3>
-                        <hr class="intro-divider">
+                        <h1>&nbsp;</h1>
+                        <h3>&nbsp;</h3>
+                        &nbsp;
                         <h2 class="text-center">
-                            Dia 16 de Abril
+                            &nbsp;
                         </h2>
                         <h1 class="text-center">
-                            METROCAMP <br>
+                            &nbsp; <br>
                             <br>
-                            <i class="fa fa-heart"></i>&nbsp;<i class="fa fa-windows"></i> <i class="fa fa-cloud"></i>
+                            &nbsp;
                         </h1>
                     </div>
                 </div>
@@ -236,30 +236,65 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-sm-12">
-                    <h1 class="text-center">Organização e Palestrantes</h1>
+                    <h1 class="text-center">Staff</h1>
                     <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <ul class="list-inline">
+                    <div class="clearfix"></div>                    
+                    <ul class="list-inline text-center">
                         <li>
-                            <img src="http://placehold.it/130x130" alt="Palestrante" class="img img-circle img-thumbnail">
+                            <img src="assets/img/org/andrebaltieri.jpg" width="130"  alt="André Baltieri" class="img img-circle img-thumbnail">
+                            <br><br>
+                            André Baltieri <br>
+                            <strong>Microsoft MVP</strong> <br>
+                            Organizador/Palestrante
                         </li>
                         <li>
-                            <img src="http://placehold.it/130x130" alt="Palestrante" class="img img-circle img-thumbnail">
+                            <img src="assets/img/org/andredias.jpg" width="120"  alt="André Dias" class="img img-circle img-thumbnail">
+                            <br><br>
+                            André Dias <br>
+                            <strong>Microsoft MVP</strong> <br>
+                            Palestrante
                         </li>
                         <li>
-                            <img src="http://placehold.it/130x130" alt="Palestrante" class="img img-circle img-thumbnail">
+                            <img src="assets/img/org/darioandrade.png" width="120" alt="Dário Andrade" class="img img-circle img-thumbnail">
+                            <br><br>
+                            Dário Andrade <br>
+                            <strong>Microsoft MTAC</strong> <br>
+                            Organizador
                         </li>
                         <li>
-                            <img src="http://placehold.it/130x130" alt="Palestrante" class="img img-circle img-thumbnail">
+                            <img src="assets/img/org/eltontamilheiro.jpg" width="120"  alt="Elton Tamilheiro" class="img img-circle img-thumbnail">
+                            <br><br>
+                            Elton Tamilheiro <br>
+                            <strong>Microsoft MSP</strong> <br>
+                            Organizador
                         </li>
                         <li>
-                            <img src="http://placehold.it/130x130" alt="Palestrante" class="img img-circle img-thumbnail">
+                            <img src="assets/img/org/jorgevera.jpg" width="120"  alt="Jorge Vera" class="img img-circle img-thumbnail">
+                            <br><br>
+                            Jorge G. Vera <br>
+                            <strong>Microsoft MVP</strong> <br>
+                            Palestrante
                         </li>
                         <li>
-                            <img src="http://placehold.it/130x130" alt="Palestrante" class="img img-circle img-thumbnail">
+                            <img src="assets/img/org/renatogroff.jpg" width="120"  alt="Renato Groff" class="img img-circle img-thumbnail">
+                            <br><br>
+                            Renato Groff <br>
+                            <strong>Microsoft MTAC</strong> <br>
+                            Palestrante
                         </li>
                         <li>
-                            <img src="http://placehold.it/130x130" alt="Palestrante" class="img img-circle img-thumbnail">
+                            <img src="assets/img/org/robertofonseca.jpg" width="120"  alt="Roberto Fonseca" class="img img-circle img-thumbnail">
+                            <br><br>
+                            Roberto Fonseca <br>
+                            <strong>Microsoft MVP</strong> <br>
+                            Palestrante
+                        </li>
+                        <li>
+                            <img src="assets/img/org/thiagocustodio.jpg" width="120"  alt="Thiago Custódio" class="img img-circle img-thumbnail">
+                            <br><br>
+                            Thiago Custódio <br>
+                            <strong>Microsoft MVP</strong> <br>
+                            Palestrante
                         </li>
                     </ul>
                 </div>
