--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Global Azure Bootcamp - Campinas</title>
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/landing-page.css" rel="stylesheet">
@@ -65,8 +66,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>&nbsp;</h1>
-                        <h3>&nbsp;</h3>
-                        &nbsp;
+                        <h3>&nbsp;</h3> &nbsp;
                         <h2 class="text-center">
                             &nbsp;
                         </h2>
@@ -238,63 +238,71 @@
                 <div class="col-lg-12 col-sm-12">
                     <h1 class="text-center">Staff</h1>
                     <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>                    
+                    <div class="clearfix"></div>
                     <ul class="list-inline text-center">
                         <li>
-                            <img src="assets/img/org/andrebaltieri.jpg" width="130"  alt="André Baltieri" class="img img-circle img-thumbnail">
-                            <br><br>
-                            André Baltieri <br>
-                            <strong>Microsoft MVP</strong> <br>
-                            Organizador/Palestrante
+                            <img src="assets/img/org/andrebaltieri.jpg" width="130" alt="André Baltieri" class="img img-circle img-thumbnail">
+                            <br>
+                            <br> André Baltieri
+                            <br>
+                            <strong>Microsoft MVP</strong>
+                            <br> Organizador/Palestrante
                         </li>
                         <li>
-                            <img src="assets/img/org/andredias.jpg" width="120"  alt="André Dias" class="img img-circle img-thumbnail">
-                            <br><br>
-                            André Dias <br>
-                            <strong>Microsoft MVP</strong> <br>
-                            Palestrante
+                            <img src="assets/img/org/andredias.jpg" width="120" alt="André Dias" class="img img-circle img-thumbnail">
+                            <br>
+                            <br> André Dias
+                            <br>
+                            <strong>Microsoft MVP</strong>
+                            <br> Palestrante
                         </li>
                         <li>
                             <img src="assets/img/org/darioandrade.png" width="120" alt="Dário Andrade" class="img img-circle img-thumbnail">
-                            <br><br>
-                            Dário Andrade <br>
-                            <strong>Microsoft MTAC</strong> <br>
-                            Organizador
+                            <br>
+                            <br> Dário Andrade
+                            <br>
+                            <strong>Microsoft MTAC</strong>
+                            <br> Organizador
                         </li>
                         <li>
-                            <img src="assets/img/org/eltontamilheiro.jpg" width="120"  alt="Elton Tamilheiro" class="img img-circle img-thumbnail">
-                            <br><br>
-                            Elton Tamilheiro <br>
-                            <strong>Microsoft MSP</strong> <br>
-                            Organizador
+                            <img src="assets/img/org/eltontamilheiro.jpg" width="120" alt="Elton Tamilheiro" class="img img-circle img-thumbnail">
+                            <br>
+                            <br> Elton Tamilheiro
+                            <br>
+                            <strong>Microsoft MSP</strong>
+                            <br> Organizador
                         </li>
                         <li>
-                            <img src="assets/img/org/jorgevera.jpg" width="120"  alt="Jorge Vera" class="img img-circle img-thumbnail">
-                            <br><br>
-                            Jorge G. Vera <br>
-                            <strong>Microsoft MVP</strong> <br>
-                            Palestrante
+                            <img src="assets/img/org/jorgevera.jpg" width="120" alt="Jorge Vera" class="img img-circle img-thumbnail">
+                            <br>
+                            <br> Jorge G. Vera
+                            <br>
+                            <strong>Microsoft MVP</strong>
+                            <br> Palestrante
                         </li>
                         <li>
-                            <img src="assets/img/org/renatogroff.jpg" width="120"  alt="Renato Groff" class="img img-circle img-thumbnail">
-                            <br><br>
-                            Renato Groff <br>
-                            <strong>Microsoft MTAC</strong> <br>
-                            Palestrante
+                            <img src="assets/img/org/renatogroff.jpg" width="120" alt="Renato Groff" class="img img-circle img-thumbnail">
+                            <br>
+                            <br> Renato Groff
+                            <br>
+                            <strong>Microsoft MTAC</strong>
+                            <br> Palestrante
                         </li>
                         <li>
-                            <img src="assets/img/org/robertofonseca.jpg" width="120"  alt="Roberto Fonseca" class="img img-circle img-thumbnail">
-                            <br><br>
-                            Roberto Fonseca <br>
-                            <strong>Microsoft MVP</strong> <br>
-                            Palestrante
+                            <img src="assets/img/org/robertofonseca.jpg" width="120" alt="Roberto Fonseca" class="img img-circle img-thumbnail">
+                            <br>
+                            <br> Roberto Fonseca
+                            <br>
+                            <strong>Microsoft MVP</strong>
+                            <br> Palestrante
                         </li>
                         <li>
-                            <img src="assets/img/org/thiagocustodio.jpg" width="120"  alt="Thiago Custódio" class="img img-circle img-thumbnail">
-                            <br><br>
-                            Thiago Custódio <br>
-                            <strong>Microsoft MVP</strong> <br>
-                            Palestrante
+                            <img src="assets/img/org/thiagocustodio.jpg" width="120" alt="Thiago Custódio" class="img img-circle img-thumbnail">
+                            <br>
+                            <br> Thiago Custódio
+                            <br>
+                            <strong>Microsoft MVP</strong>
+                            <br> Palestrante
                         </li>
                     </ul>
                 </div>
@@ -307,11 +315,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="text-center">Patrocinadores</h1>
+                    <h1 class="text-center">Patrocínio</h1>
                     <br>
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="#"><img src="http://placehold.it/350x160" alt=""></a>
+                            <a href="http://metrocamp.com.br/" target="_blank"><img src="assets/img/support/metrocamp.png" width="200" alt="Metrocamp"></a>
+                        </li>
+                        <li>
+                            <a href="http://www.esx.com.br/" target="_blank"><img src="assets/img/support/esx.png" width="200" alt="ESX"></a>
+                        </li>
+                        <li>
+                            <a href="http://andrebaltieri.net/" target="_blank"><img src="assets/img/support/andrebaltieri.png" width="200" alt="André Baltieri - Treinamentos e Consultorias"></a>
+                        </li>
+                        <li>
+                            <a href="http://imobee.com.br/" target="_blank"><img src="assets/img/support/imobee.png" width="200" alt="Imobee"></a>
                         </li>
                     </ul>
                 </div>
@@ -342,7 +359,7 @@
                         <li class="footer-menu-divider">&sdot;</li>
                         <li class="active">
                             <a href="http://bit.ly/gwab-2016-campinas" target="_blank">Inscrições</a>
-                        </li>                        
+                        </li>
                     </ul>
                     <p class="copyright text-muted small">We <i class="fa fa-heart"></i>&nbsp;<i class="fa fa-windows"></i> <i class="fa fa-cloud"></i></p>
                 </div>
