--- a/index.html
+++ b/index.html
@@ -319,6 +319,9 @@
                     <br>
                     <ul class="list-inline banner-social-buttons">
                         <li>
+                            <a href="http://www.peoplecampinas.com.br/" target="_blank"><img src="assets/img/support/peoplecampinas.png" width="200" alt="People Campinas"></a>
+                        </li>
+                        <li>
                             <a href="http://pushschool.com/" target="_blank"><img src="assets/img/support/push_school.png" width="200" alt="Push School"></a>
                         </li>
                         <li>
