Adicionado agenda de DEv e Devops

--- a/index.html
+++ b/index.html
@@ -157,36 +157,38 @@
                             <tr>
                                 <td class="text-center">Horário</td>
                                 <td class="text-center">Assunto</td>
+                                <td class="text-center">Local</td>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td class="text-center">08:30</td>
                                 <td>Credenciamento</td>
+                                <td class="text-center">Auditório</td>
                             </tr>
                             <tr>
                                 <td class="text-center">09:00</td>
                                 <td>KeyNote</td>
+                                <td class="text-center">Auditório</td>
                             </tr>
                             <tr>
                                 <td class="text-center">09:30</td>
                                 <td>Patrocinadores</td>
+                                <td class="text-center">Auditório</td>
                             </tr>
                             <tr>
                                 <td class="text-center">10:00</td>
-                                <td>Criação da conta no Microsoft Azure</td>
-                            </tr>
-                            <tr>
-                                <td class="text-center">10:30</td>
-                                <td>Introdução ao Portal do Microsoft Azure</td>
+                                <td>Introdução ao Microsoft Azure</td>
+                                <td class="text-center">Auditório</td>
                             </tr>
                             <tr>
                                 <td class="text-center">11:00</td>
-                                <td>Introdução ao Microsoft Azure</td>
+                                <td>Criação da conta no Microsoft Azure</td>
+                                <td class="text-center">Salas</td>
                             </tr>
                             <tr class="active">
                                 <td class="text-center">12:00</td>
-                                <td class="text-center">ALMOÇO POR CONTA DO PARTICIPANTE</td>
+                                <td class="text-center" colspan="2">ALMOÇO POR CONTA DO PARTICIPANTE</td>
                             </tr>
                         </tbody>
                     </table>
@@ -204,13 +206,86 @@
                         <div role="tabpanel" class="tab-pane active" id="dev">
                             <div class="col-md-12">
                                 <br>
-                                <h2 class="text-center">Agenda a ser definida</h2>
+                                <table class="table table-striped table-hover">
+                                    <thead>
+                                        <tr>
+                                            <td class="text-center">Horário</td>
+                                            <td class="text-center">Assunto</td>
+                                            <td class="text-center">Palestrante</td>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td class="text-center">13:00</td>
+                                            <td>IaaS, PaaS e SaaS para Developers</td>
+                                            <td class="text-center">Renato Groff</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-center">14:00</td>
+                                            <td>Múltiplas opções na persistência de informações no Azure</td>
+                                            <td class="text-center">Thiago Custódio</td>
+                                        </tr>
+                                        <tr class="active">
+                                            <td class="text-center">15:00</td>
+                                            <td class="text-center" colspan="2">COFFEE BREAK</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-center">16:00</td>
+                                            <td>Debbugando WebHooks no Azure</td>
+                                            <td class="text-center">André Baltieri</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-center">16:30</td>
+                                            <td>Open Session</td>
+                                            <td class="text-center">Todos</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                         <div role="tabpanel" class="tab-pane" id="devops">
                             <div class="col-md-12">
                                 <br>
-                                <h2 class="text-center">Agenda a ser definida</h2>
+                                <table class="table table-striped table-hover">
+                                    <thead>
+                                        <tr>
+                                            <td class="text-center">Horário</td>
+                                            <td class="text-center">Assunto</td>
+                                            <td class="text-center">Palestrante</td>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td class="text-center">13:00</td>
+                                            <td>Introdução a DevOps</td>
+                                            <td class="text-center">André Dias</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-center">13:30</td>
+                                            <td>DevOps com Azure Web Sites (Continuous Deployment, Promoção entre Ambientes, Performance Test e Auto Scaling)</td>
+                                            <td class="text-center">André Dias</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-center">14:00</td>
+                                            <td> Monitorando Aplicações com Application Insights</td>
+                                            <td class="text-center">André Dias</td>
+                                        </tr>
+                                        <tr class="active">
+                                            <td class="text-center">15:00</td>
+                                            <td class="text-center" colspan="2">COFFEE BREAK</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-center">16:00</td>
+                                            <td>Controle de Gastos, Liberadade para o time de Desenvolvimento e Redução de Custo com  DevTest Labs</td>
+                                            <td class="text-center">André Dias</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-center">16:30</td>
+                                            <td>DevOps com VSTS, DevTest Labs e VMs</td>
+                                            <td class="text-center">André Dias</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                         <div role="tabpanel" class="tab-pane" id="dataplatform">
