--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@
                             </tr>
                             <tr>
                                 <td class="text-center">09:00</td>
-                                <td>KeyNote</td>
-                                <td class="text-center">Auditório</td>
+                                <td class="text-center" colspan="2">Coffee Break</td>
                             </tr>
                             <tr>
                                 <td class="text-center">09:30</td>
@@ -178,7 +177,7 @@
                             </tr>
                             <tr>
                                 <td class="text-center">10:00</td>
-                                <td>Introdução ao Microsoft Azure</td>
+                                <td>Keynote e Introdução ao Microsoft Azure</td>
                                 <td class="text-center">Auditório</td>
                             </tr>
                             <tr>
