--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             </tr>
                             <tr>
                                 <td class="text-center">09:00</td>
-                                <td class="text-center" colspan="2">Coffee Break</td>
+                                <td class="text-center" colspan="2">Café da Manhã</td>
                             </tr>
                             <tr>
                                 <td class="text-center">09:30</td>
@@ -224,17 +224,13 @@
                                             <td>Múltiplas opções na persistência de informações no Azure</td>
                                             <td class="text-center">Thiago Custódio</td>
                                         </tr>
-                                        <tr class="active">
-                                            <td class="text-center">15:00</td>
-                                            <td class="text-center" colspan="2">COFFEE BREAK</td>
-                                        </tr>
                                         <tr>
-                                            <td class="text-center">16:00</td>
+                                            <td class="text-center">15:00</td>
                                             <td>Debbugando WebHooks no Azure</td>
                                             <td class="text-center">André Baltieri</td>
                                         </tr>
                                         <tr>
-                                            <td class="text-center">16:30</td>
+                                            <td class="text-center">16:00</td>
                                             <td>Open Session</td>
                                             <td class="text-center">Todos</td>
                                         </tr>
@@ -269,12 +265,8 @@
                                             <td> Monitorando Aplicações com Application Insights</td>
                                             <td class="text-center">André Dias</td>
                                         </tr>
-                                        <tr class="active">
-                                            <td class="text-center">15:00</td>
-                                            <td class="text-center" colspan="2">COFFEE BREAK</td>
-                                        </tr>
                                         <tr>
-                                            <td class="text-center">16:00</td>
+                                            <td class="text-center">15:00</td>
                                             <td>Controle de Gastos, Liberadade para o time de Desenvolvimento e Redução de Custo com  DevTest Labs</td>
                                             <td class="text-center">André Dias</td>
                                         </tr>
