Atualizado grade e guia de instalação

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <p class="text-center">
                         Fique tranquilo, pois todos os softwares utilizados são trial ou gratuitos.
                         <br>
-                        <a href="">Clique aqui para baixar as instruções sobre as instalações dos softwares</a>
+                        <a href="http://renatogroffe.net/azure-bootcamp-2016-ambiente-desenvolvimento/" target="_blank">Clique aqui para baixar as instruções sobre as instalações dos softwares</a>
                     </p>
                 </div>
             </div>
@@ -257,7 +257,8 @@
                                         </tr>
                                         <tr>
                                             <td class="text-center">13:30</td>
-                                            <td>DevOps com Azure Web Sites (Continuous Deployment, Promoção entre Ambientes, Performance Test e Auto Scaling)</td>
+                                            <td>DevOps com Azure Web Sites (Continuous Deployment, Promoção entre Ambientes,
+                                                Performance Test e Auto Scaling)</td>
                                             <td class="text-center">André Dias</td>
                                         </tr>
                                         <tr>
@@ -267,7 +268,8 @@
                                         </tr>
                                         <tr>
                                             <td class="text-center">15:00</td>
-                                            <td>Controle de Gastos, Liberadade para o time de Desenvolvimento e Redução de Custo com  DevTest Labs</td>
+                                            <td>Controle de Gastos, Liberadade para o time de Desenvolvimento e Redução de Custo
+                                                com DevTest Labs</td>
                                             <td class="text-center">André Dias</td>
                                         </tr>
                                         <tr>
@@ -288,7 +290,32 @@
                         <div role="tabpanel" class="tab-pane" id="itpro">
                             <div class="col-md-12">
                                 <br>
-                                <h2 class="text-center">Agenda a ser definida</h2>
+                                <table class="table table-striped table-hover">
+                                    <thead>
+                                        <tr>
+                                            <td class="text-center">Horário</td>
+                                            <td class="text-center">Assunto</td>
+                                            <td class="text-center">Palestrante</td>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td class="text-center">13:00</td>
+                                            <td>Entendendo o Azure para ITPros</td>
+                                            <td class="text-center">Jorge Vera</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-center">14:00</td>
+                                            <td>Pratica de Laboratório</td>
+                                            <td class="text-center">Jorge Vera</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-center">15:00</td>
+                                            <td>Open Session</td>
+                                            <td class="text-center">Jorge Vera</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
