Atualizado grade e guia de instalação

--- a/index.html
+++ b/index.html
@@ -162,8 +162,13 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td class="text-center">08:30</td>
+                                <td class="text-center">08:00</td>
                                 <td>Credenciamento</td>
+                                <td class="text-center">Auditório</td>
+                            </tr>
+                            <tr>
+                                <td class="text-center">08:30</td>
+                                <td>Credenciamento da Fila de Espera</td>
                                 <td class="text-center">Auditório</td>
                             </tr>
                             <tr>
